--- a/My_Theme_Collection/NewRemTheme.theme.css
+++ b/My_Theme_Collection/NewRemTheme.theme.css
@@ -11,6 +11,21 @@
     background-color: transparent;
 }
 
+.theme-dark .scrollerContainer_c6b11b, 
+.theme-dark .emptyPage_c6b11b,
+.separator_c6b11b {
+  background-color: transparent;
+}
+
+#app-mount .container_f1fd9c /* Channel and Roles */,
+#app-mount .header_f1fd9c {
+  background-color: transparent !important;
+}
+
+.pageBody_c2efea {
+  background: none;
+}
+
 
 /* (*NEW*) Members List */
 .page_d20375 /* (Members List *NEW*) */ {
@@ -220,8 +235,7 @@
     background-color: transparent;
 }
 
-.withTagAsButton_b2ca13:hover,
-.withTagless_b2ca13:hover {
+.avatarWrapper_b2ca13:hover {
     background-color: rgba(0, 0, 0, .3);
     border-radius: 4px;
     border: 1px solid #00aeff;
@@ -352,8 +366,8 @@
     mask: none;
 }
 
-.theme-dark .outer_c0f6a6.active_c0f6a6,
-.theme-dark .outer_c0f6a6.interactive_c0f6a6:hover {
+.theme-dark .outer_ac5d22.active_ac5d22,
+.theme-dark .outer_ac5d22.interactive_ac5d22:hover {
     background-color: rgba(0, 0, 0, 0.28);
 }
 
@@ -613,7 +627,7 @@
     color: white;
 }
 
-.tip_dcc874 {
+.tip_b5053a {
     color: white;
     opacity: 1;
 }
@@ -1687,13 +1701,13 @@
     border-radius: 5px;
 }
 
-.mention_c10249 {
+.mention_edf32f {
     background-color: rgba(97, 165, 216, .7);
     border-radius: 4px;
     border: 3px outset #61A5D8;
 }
 
-.mention_c10249:active {
+.mention_edf32f:active {
     background-color: #76AAD9;
 }
 
@@ -2268,7 +2282,7 @@ button.button_adca65.enabled_adca65:hover {
     border-radius: 4px;
 }
 
-.scroller_e9196a {
+.scroller_ff90b2 {
     background-color: transparent;
 }
 
@@ -2720,15 +2734,15 @@ button.button_adca65.enabled_adca65:hover {
     background-color: transparent;
 }
 
-.contentDefault_f14193 {
+.contentDefault_e3c1c6 {
     color: white;
 }
 
-.result_f14193[aria-selected=true] {
+.result_e3c1c6[aria-selected=true] {
     background: rgba(118, 170, 217, .4);
 }
 
-.note_f14193 {
+.note_e3c1c6 {
     text-transform: capitalize;
     color: white;
 }
@@ -2829,7 +2843,7 @@ button.button_adca65.enabled_adca65:hover {
     border: none;
 }
 
-.theme-dark .inset_c0f6a6 {
+.theme-dark .inset_ac5d22 {
     background-color: transparent;
 }
 
@@ -2878,7 +2892,7 @@ button.button_adca65.enabled_adca65:hover {
     color: white;
 }
 
-.search_f69601 .searchBox_d83b4d .searchIcon_f69601,
+#app-mount .searchIcon_d83b4d,
 .search_f69601 .searchBox_d83b4d .closeIcon_f69601 {
     color: white !important;
 }
@@ -3770,12 +3784,12 @@ button.button_adca65.enabled_adca65:hover {
     box-shadow: none;
 }
 
-.phoneField_d4eb58 {
+.phoneField_f26de7 {
     background-color: rgba(0, 0, 0, .4);
     border: none;
 }
 
-.phoneField_d4eb58 .inputField_d4eb58 {
+.phoneField_f26de7 .inputField_f26de7 {
     background-color: transparent;
     color: white;
 }
@@ -4033,17 +4047,17 @@ button.button_adca65.enabled_adca65:hover {
     background-color: #FF2EB9;
 }
 
-.theme-dark .tierAccomplished_a4fd01,
-.theme-dark .tierCurrent_a4fd01,
-.theme-dark .tierFirst_a4fd01 {
+.theme-dark .tierAccomplished_bfac79,
+.theme-dark .tierCurrent_bfac79,
+.theme-dark .tierFirst_bfac79 {
     background: #FF2EB9;
 }
 
-.foreground_a4fd01 {
+.foreground_bfac79 {
     color: #FF2EB9;
 }
 
-.theme-dark .tierInProgress_a4fd01 {
+.theme-dark .tierInProgress_bfac79 {
     background-color: rgba(0, 0, 0, .4);
 }
 
