--- a/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
+++ b/My_Theme_Collection/Old-AkameGaKill-Theme.theme.css
@@ -11,6 +11,21 @@
   background-image: url(https://images5.alphacoders.com/542/542751.jpg);
 }
 
+.theme-dark .scrollerContainer_c6b11b, 
+.theme-dark .emptyPage_c6b11b,
+.separator_c6b11b {
+  background-color: transparent;
+}
+
+#app-mount .container_f1fd9c /* Channel and Roles */,
+#app-mount .header_f1fd9c {
+  background-color: transparent !important;
+}
+
+.pageBody_c2efea {
+  background: none;
+}
+
 .executedCommand_ec86aa,
 .repliedMessage_ec86aa,
 .threadMessageAccessory_ec86aa {
@@ -221,8 +236,7 @@
   background-color: transparent;
 }
 
-.withTagAsButton_b2ca13:hover,
-.withTagless_b2ca13:hover {
+.avatarWrapper_b2ca13:hover {
   background-color: rgba(0, 0, 0, .3);
   border-radius: 4px;
   border: 1px solid #9b2742;
@@ -400,7 +414,7 @@
 .bg_d4b6c5,
 .theme-dark .layer_d4b6c5,
 .contentRegionScroller_c25c6d,
-.scroller_e9196a {
+.scroller_ff90b2 {
   background-color: transparent;
 }
 
@@ -1414,13 +1428,13 @@ button.button_adca65.enabled_adca65:hover {
   background-color: rgba(0, 0, 0, .2);
 }
 
-.mention_c10249 {
+.mention_edf32f {
   background-color: #9b2742;
   border-radius: 4px;
   opacity: .5;
 }
 
-.mention_c10249:active,
+.mention_edf32f:active,
 .iconBadge_fc4f04 {
   background-color: #9b2742;
 }
@@ -2057,7 +2071,7 @@ button.button_adca65.enabled_adca65:hover {
   background: none;
 }
 
-.tip_dcc874 {
+.tip_b5053a {
   color: white;
   opacity: 1;
 }
@@ -2460,9 +2474,9 @@ button.button_adca65.enabled_adca65:hover {
 .akaBadge_d6c26f,
 .nicknames_d6c26f,
 .welcomeMessage-ULm0mo p,
-.header_f14193,
-.contentDefault_f14193,
-.misc_f14193,
+.header_e3c1c6,
+.contentDefault_e3c1c6,
+.misc_e3c1c6,
 .icon_f14193,
 .emptyStateNote_f4e139 {
   color: white;
@@ -2501,7 +2515,7 @@ button.button_adca65.enabled_adca65:hover {
   color: white;
 }
 
-.result_f14193[aria-selected=true] {
+.result_e3c1c6[aria-selected=true] {
   background: #ad3950;
 }
 
@@ -2522,7 +2536,7 @@ button.button_adca65.enabled_adca65:hover {
 }
 
 
-.result_f14193[aria-selected=true] {
+.result_e3c1c6[aria-selected=true] {
   background: #ad3950;
 }
 
@@ -2530,7 +2544,7 @@ button.button_adca65.enabled_adca65:hover {
   opacity: 1;
 }
 
-.note_f14193 {
+.note_e3c1c6 {
   color: silver;
 }
 
@@ -2625,12 +2639,12 @@ button.button_adca65.enabled_adca65:hover {
   background-color: rgba(0, 0, 0, .23);
 }
 
-.theme-dark .outer_c0f6a6.active_c0f6a6,
-.theme-dark .outer_c0f6a6.interactive_c0f6a6:hover {
+.theme-dark .outer_ac5d22.active_ac5d22,
+.theme-dark .outer_ac5d22.interactive_ac5d22:hover {
   background-color: rgba(0, 0, 0, .53);
 }
 
-.theme-dark .inset_c0f6a6,
+.theme-dark .inset_ac5d22,
 .section_cd82a7,
 .header_bd05f1,
 .titleContainer_e87574 {
@@ -2885,7 +2899,7 @@ button.button_adca65.enabled_adca65:hover {
 
 
 .search_f69601 .searchBox_d83b4d .closeIcon_f69601,
-.search_f69601 .searchBox_d83b4d .searchIcon_f69601,
+#app-mount .searchIcon_d83b4d,
 .search_f69601 .searchBox_d83b4d .searchBoxInput_f69601 {
   color: white;
 }
@@ -2954,12 +2968,12 @@ button.button_adca65.enabled_adca65:hover {
   background-color: transparent;
 }
 
-.phoneField_d4eb58 {
+.phoneField_f26de7 {
   background-color: transparent;
   border: none;
 }
 
-.phoneField_d4eb58 .inputField_d4eb58 {
+.phoneField_f26de7 .inputField_f26de7 {
   background-color: transparent;
   color: white;
 }
@@ -4746,17 +4760,17 @@ button.button_adca65.enabled_adca65:hover {
   background-color: #FF2EB9;
 }
 
-.theme-dark .tierAccomplished_a4fd01,
-.theme-dark .tierCurrent_a4fd01,
-.theme-dark .tierFirst_a4fd01 {
+.theme-dark .tierAccomplished_bfac79,
+.theme-dark .tierCurrent_bfac79,
+.theme-dark .tierFirst_bfac79 {
   background: #FF2EB9;
 }
 
-.foreground_a4fd01 {
+.foreground_bfac79 {
   color: #FF2EB9;
 }
 
-.theme-dark .tierInProgress_a4fd01 {
+.theme-dark .tierInProgress_bfac79 {
   background-color: rgba(0, 0, 0, .4);
 }
 
